src/os_posix/os_thread.c
@@ -19,7 +19,8 @@ __wt_thread_create(WT_SESSION_IMPL *session,
 	WT_DECL_RET;
 
 	/* Spawn a new thread of control. */
-	if ((ret = pthread_create(tidret, NULL, func, arg)) == 0)
+	WT_SYSCALL_RETRY(pthread_create(tidret, NULL, func, arg), ret);
+	if (ret == 0)
 		return (0);
 	WT_RET_MSG(session, ret, "pthread_create");
 }
@@ -33,7 +34,8 @@ __wt_thread_join(WT_SESSION_IMPL *session, wt_thread_t tid)
 {
 	WT_DECL_RET;
 
-	if ((ret = pthread_join(tid, NULL)) == 0)
+	WT_SYSCALL_RETRY(pthread_join(tid, NULL), ret);
+	if (ret == 0)
 		return (0);
 
 	WT_RET_MSG(session, ret, "pthread_join");
